--- a/reroute.html
+++ b/reroute.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://jonhicks123.github.io/templates/index.html">
+<meta http-equiv="refresh" content="0; url=https://jonhicks123.github.io/Uber-Price-Predictions/templates/index.html">
